# epic-prover

./: .gitignore  Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs  operations.rs  types.rs
script/: Cargo.toml
script/src/: prepare_inputs.rs
