[package]
version = "0.1.0"
name = "fibonacci-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = "4.0.0"
fibonacci-lib = { path = "../lib" }
bincode = "1.3.3" 
serde = { version = "1.0.218", features = ["derive"] }
num-traits = "0.2"

# Include only the homomorphic module from epic-node
[dependencies.epic-node]
path = "../../epic-node"
default-features = false
features = []