[package]
version = "0.1.0"
name = "fibonacci-script"
edition = "2021"
default-run = "fibonacci"

[[bin]]
name = "fibonacci"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[[bin]]
name = "attestation"
path = "src/bin/attestation.rs"

[[bin]]
name = "epic_attestation"
path = "src/bin/epic_attestation.rs"

[[bin]]
name = "prepare_inputs"
path = "src/prepare_inputs.rs"

[dependencies]
sp1-sdk = "4.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
fibonacci-lib = { path = "../lib" }
dotenv = "0.15.0"
bincode = "1.3.3"
# Removed paillier dependency since we're using our custom implementation
epic-node = { path = "../../epic-node" }
anyhow = "1.0"

[build-dependencies]
sp1-build = "4.0.0"